# HumanRobotInteraction

./: .gitignore  Instruções e dicas para o ROS, Scout e Katana  README.md  hri_notebook.ipynb  indigo_install_mint  katana_symlink  rosmake_script
.ipynb_checkpoints/: hri_notebook-checkpoint.ipynb
ActionNode/: Action_next_steps.txt  README.md  SimpleKatanaPublisher.py  katana_follow_joint_traject.dot  katana_joint_traject_action.dot  scout_teleop.dot
ActionNode/katana_control/: FinalKatanaController.py  SimpleKatanaPublisher.py  SimpleTrajectoryPublisher.py  joint_states_subscriber.py  manifest.xml
ActionNode/katanafun-master/: CMakeLists.txt  README.md  package.xml
ActionNode/katanafun-master/include/katanafun/: ymca.h
ActionNode/katanafun-master/launch/: ymca.launch
ActionNode/katanafun-master/src/: ymca.cpp
ActionNode/scout_control/: manifest.xml  scout_control.py  scout_control_v2.py  scout_simple_goal_publisher.py
ActionNode/scout_nav/: manifest.xml
DecisionNode/: Classification.py
DecisionNode/hri_decision_node/: decision_node.py  decision_node_graph.py  decision_node_with_fraction_updates.py  manifest.xml
others/: removeformating.py
others/ModelTraining/: test_database.csv  train_model.py  waving.csv
others/TrainingData/: Database.txt  TUDO.csv  TUDO2.csv  TUDO3.csv  Tracker_training.py  (+5 more)
report/: Conclusion.tex  Introduction.tex  Material_Software.tex  Our_Structure.tex  README  README.md  Relatorio.tex  Relatorio_v1.aux  Relatorio_v1.tex  abstract.tex  action_node.tex  bibliography.tex  decision_node.tex  headers.tex  kinect gesture.rtf  kinect_node.tex  latex-setup
ros_skeleton_tracker/: Regras_Movimentos_GDL  manifest.xml
rosbag/: command.txt  kinect_bag_file_raw_data_2015-10-22-11-53-24.bag
tcp server/: server.py
(+136 files in other folders)
