<?xml version="1.0"?>
<package>
  <name>katanafun</name>
  <version>0.1.0</version>
  <description>
     Make the katana robot dance YMCA.
  </description>
  <author email="tsagiotis@gmail.com">Tasos Sangiotis</author>
  <maintainer email="tsagiotis@gmail.com">Tasos Sangiotis</maintainer>
  <license>GPL</license>
  <url type="website">http://tsangiotis.com</url>

  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
